=== 3.10 / ??

* Major enhancements
  * RDoc supports RD format documentation.

* Minor enhancements
  * Added RDoc::TopLevel#text? and RDoc::Parser::Text to indicate a
    parsed file contains no ruby constructs.

=== 3.9.1 / 2011-07-31

* Bug fixes
  * Fix RDoc::Markup parser for a header followed by a non-text token.  Issue
    #56 by Adam Tait
  * Fix RDoc::Markup::ToHtmlCrossref#gen_url for non-<tt>rdoc-ref</tt> links.
  * Fix bug report URL when rdoc crashes.

=== 3.9 / 2011-07-30

* Minor enhancements
  * RDoc::Parser::C now supports :doc: and :nodoc: for class comments
  * Added the <tt>rdoc-ref:</tt> link scheme which links to a named reference.
    <tt>rdoc-ref:</tt> can resolve references to classes, modules, methods,
    files, etc.  This can be used to create cross-generator named links unlike
    the <tt>link:</tt> scheme which is dependent upon the exact file name.
    Issue #53 by Simon Chiang
  * Pulled RDoc::CrossReference out of RDoc::Markup::ToHtmlCrossref.
    Cross-references can now be created easily for non-HTML formatters.
* Bug fixes
  * `ri []` and other special methods now work properly.  Issue #52 by
    ddebernardy.
  * `ri` now has space between class comments from multiple files.
  * :stopdoc: no longer creates Object references.  Issue #55 by Simon Chiang
  * :nodoc: works on class aliases now.  Issue #51 by Steven G. Harms
  * Remove tokenizer restriction on header lengths for verbatim sections.
    Issue #49 by trans

=== 3.8 / 2011-06-29

* Minor enhancements
  * RDoc::Parser::C can now discover methods on ENV and ARGF.
  * RDoc::Parser::C now knows about rb_cSocket and rb_mDL.
* Bug fixes
  * Updating Object in an ri data store with new data now removes methods,
    includes, constants and aliases.

=== 3.7 / 2011-06-27

* Minor enhancements
  * New directive :category: which allows methods to be grouped into sections
    more cleanly.  See RDoc::Markup for details.